# handsome

./: .gitignore  .gitmodules  README.md
eye-rec/cpp/: CMakeLists.txt  demo.cpp  features.h  test_lenet.cpp  train_lenet.cpp
eye-rec/python/: augment.py  sample.py  shuffle.py  util.py
face-tracker/cpp/: CMakeLists.txt  fhog_object_detector_ex.cpp  test.cpp
face-tracker/python/: test_opencv_face.py
model/: Net-weights-eye  Net-weights-tongue
tongue-rec/cpp/: demo.cpp  features.h  test_lenet.cpp  train_lenet.cpp
tongue-rec/python/: augment.py  sample.py  shuffle.py  transpose.py  util.py
